--- a/baseball.html
+++ b/baseball.html
@@ -8,7 +8,7 @@
   <body>
     <ul> 
       <li> 
-         <a href="football.html">Pittsburgh Steelers Football </a>
+         <a href="index.html">Pittsburgh Steelers Football </a>
        </li>
        <li> 
           <a href="basketball.html">New York Knicks Basketball </a>
