--- a/basketball.html
+++ b/basketball.html
@@ -47,22 +47,24 @@
         
         <h3>
            Some Facts About the Knicks
-             <ul>
-                 The Knicks were established in 1946
-             </ul>
-             <ul>
-                 The Knicks play in MSG, which is also home to the NHL New York Rangers
-             </ul>
-             <ul>
-                 Current players include Carmelo Anthony, Kristaps Porzingis, and Derrick Rose
-             </ul>
-             <ul>
-                 The teams' real name is "Knickerbockers"
-             </ul>
-             <ul>
-                 The Knicks have two (2) championships, both in the 70s
-             </ul>
-             <a href="http://www.nba.com">Click here to view the official site of the NBA</a>
+            <div>
+               <ul>
+                   The Knicks were established in 1946
+               </ul>
+               <ul>
+                   The Knicks play in MSG, which is also home to the NHL New York Rangers
+               </ul>
+               <ul>
+                   Current players include Carmelo Anthony, Kristaps Porzingis, and Derrick Rose
+               </ul>
+               <ul>
+                   The teams' real name is "Knickerbockers"
+               </ul>
+               <ul>
+                   The Knicks have two (2) championships, both in the 70s
+               </ul>
+               <a href="http://www.nba.com">Click here to view the official site of the NBA</a>
+            </div>
         </h3>
         
 
