--- a/basketball.html
+++ b/basketball.html
@@ -11,7 +11,7 @@
             <a href="baseball.html">New York Yankees Baseball </a>
             </li>
             <li> 
-            <a href="football.html">Pittsburgh Steelers Football </a>
+            <a href="index.html">Pittsburgh Steelers Football </a>
             </li>
             <li>
             <a href="march-madness.html">March Madness</a> 
